--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=application
 
-server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/pathmates?useSSL=false&serverTimezone=UTC
+server.port=8090
+spring.datasource.url=jdbc:mysql://localhost:3306/pathmates
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
