--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.11.5</version>
 		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.14.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
