--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.datasource.hikari.connection-timeout=20000
 
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=prometheus
+
+
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.messaging=DEBUG
+logging.level.org.springframework.boot=DEBUG
+
